POR FIN FUNCIONA BIEN EL MINIMAX